# SceneCognition-TV

./: 1331.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tcl/weilong/mace/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: labels.txt  model.tflite  model128.tflite  model256.tflite  model_c11_1.6.tflite  model_v128_1126.tflite
app/src/main/cpp/: fpi_video_mace_interface.h  mace_jni.cpp  mace_jni.h
app/src/main/cpp/public/: mace-define.h  mace.h  mace_engine_factory.h  mace_runtime.h  mobilenet_v2.h
app/src/main/java/com/tcl/recognize/tslite/: ImageClassifier.java  LocalRecognize.java
app/src/main/java/com/tcl/recognize/tv/: GetConfig.java  LocalResize.java  RecognizeService.java  RecognizeTask.java  ScreenshotNewPlatform.java  ServiceHandler.java  StartupReceiver.java
app/src/main/java/com/tcl/recognize/util/: CaughtException.java  Constant.java  DeviceInfo.java  ErrorCode.java  FlashFreeSpace.java  LogManagerUtil.java  NetWorkState.java  RootSeeker.java  TimestampUtil.java  Utilities.java
app/src/main/java/com/tcl/weilong/mace/: AppModel.java  DelInput.java  DelOutput.java  JniUtils.java  MaceClassifier.java  ResultData.java
app/src/main/java/org/tensorflow/lite/: Interpreter.java  NativeInterpreterWrapper.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/LocalRecognize/: Android.mk  mat2FloatArray.cpp  mat2FloatArray.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: scene_recognize.xml
app/src/main/res/values/: config.xml  strings.xml
(+16 files in other folders)
